# pipewire-3d-mixer

./: .gitignore  4_channel_spatializer.conf  8_channel_spatializer.conf  README.md  app.c  app.h  hrtf-b_nh724.sofa  main.c  meson.build  pipewire.c  pipewire.h  pw-3d-mixer.desktop  setup.sh  sp_2.conf  spatial_notification.c  ui.c  ui.h
app/: 2d_gui.py  requirements.txt  simple_azimuth_setter.py
backups/: sparta_binaural-2025-03-05_181001.rpp-bak  sparta_binaural-2025-03-05_181632.rpp-bak  sparta_binaural-2025-03-05_190157.rpp-bak
